--- a/pages/shop.html
+++ b/pages/shop.html
@@ -72,12 +72,12 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <!-- Carrito -->
+            
                 <h6>
                     <span id="cantidadProductos"></span>
                 </h6>
                 <div id="carrito">
-                    <!-- Acá vamos a cargar los productos que estén en el carrito -->
+                
                 </div>
                 <h3>Total: $<span id="totalCarrito">0</span></h3>
                 <a href="#" id="botonComprar" class="oculto btn btnComprar btn-primary">Comprar</a>
@@ -188,31 +188,26 @@
             </form>
         </section>
         <script src="../js/darkmode.js" type="text/javascript"></script>
-        <!-- Numeral libreria -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
-        <!-- Librería Sweet Alert -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <!-- Toastify -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-        <!-- INSTACIONAMOS -->
         <script src="../js/app.js" defer></script>
         <script src="../js/sendmail.js" type="text/javascript"></script>
     </main>
 
-    <!--Comienza footer -->
     <footer class="base-footer">
         <div>
-            <p class="pFooter"> Nicolas Maximiliano Caminos © 2023 </p>
+            <p class="pFooter"> COMPUPARTES © 2023 </p>
         </div>
         <ul class="socialmedia">
             <li>
-                <a title="github" class="bi bi-github" href="https://github.com/NicolasCaminos"></a>
+                <a title="github" class="bi bi-github" href=""></a>
             </li>
             <li>
-                <a title="linkedin" class="bi bi-linkedin" href="https://www.linkedin.com/in/nicolascaminos/"></a>
+                <a title="linkedin" class="bi bi-linkedin" href=""></a>
             </li>
             <li>
-                <a title="Whatsapp" class="bi bi-whatsapp" href="https://api.whatsapp.com/send?phone=3517075862"></a>
+                <a title="Whatsapp" class="bi bi-whatsapp" href=""></a>
             </li>
             <li>
                 <a title="Youtube" class="bi bi-youtube"
